hedgehog v0.1.7                         2018-02-26
==================================================
- fixed group.names behaviour in stripboxplot

hedgehog v0.1.6                         2018-02-11
==================================================
- added is.error function 

hedgehog v0.1.5                         2018-02-03
==================================================
- made extension argument optional in 
  datestamp.filename

hedgehog v0.1.4                         2018-01-21
==================================================
- added read.header and parse.tcga.id functions

hedgehog v0.1.3                         2018-01-17
==================================================
- variable point colours in stripboxplot

hedgehog v0.1.2                         2018-01-16
==================================================
- KM plot colours
- removed outliers in stripboxplot

hedgehog v0.1.1                         2018-01-15
==================================================
- added get.colour.palette function