@@ -4,6 +4,7 @@ export(call.tcga.cnas)
 export(censoring.km.estimate)
 export(colour.code.cnas)
 export(conf.int.string)
+export(convert.time.numeric)
 export(date.stamp.file.name)
 export(datestamp.filename)
 export(factor.to.numeric)
